files/examples/ok/higher_scoper_variable.t
def a():
    int i
    def b():
    i:=5
    end

    b()
end