files/examples/error/syntax_missind end.t
def main()
int a
a := 5
